--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.3.1",
     "@tailwindcss/vite": "^4.1.13",
+    "@turf/turf": "^7.2.0",
     "mapbox-gl": "^3.15.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
